--- a/docs/docs/api/settings/index.mdx
+++ b/docs/docs/api/settings/index.mdx
@@ -4,9 +4,8 @@ import { Example } from '@site/docs/components/example';
 
 ## Opts
 
-<span className="badge badge--secondary margin-left--xs margin-bottom--lg">
-    templates@v1.0.21
-</span>
+{/* prettier-ignore */}
+<span className="badge badge--secondary margin-left--xs margin-bottom--lg">templates@v1.0.21</span>
 
 ```ts title="Type"
 TemplateOptions;
