--- a/docs/docs/api/template.mdx
+++ b/docs/docs/api/template.mdx
@@ -488,9 +488,8 @@ Notice how this no longer creates a `app` directory.
 
 ### Hidden
 
-<span className="badge badge--secondary margin-left--xs margin-bottom--lg">
-    templates@>v1.1.1
-</span>
+{/* prettier-ignore */}
+<span className="badge badge--secondary margin-left--xs margin-bottom--lg">templates@>v1.1.1</span>
 
 ```ts title="Type"
 boolean;
