--- a/docs/docs/main/create-new-template/prompts.mdx
+++ b/docs/docs/main/create-new-template/prompts.mdx
@@ -641,9 +641,8 @@ tps.setAnswers({ f: 'react' });
 
 ### Hidden
 
-<span className="badge badge--secondary margin-left--xs margin-bottom--lg">
-    templates@>v1.1.1
-</span>
+{/* prettier-ignore */}
+<span className="badge badge--secondary margin-left--xs margin-bottom--lg">templates@>v1.1.1</span>
 
 The `hidden` option makes the prompt a hidden prompt. Hidden prompts do not get
 prompted by default. This is useful when you want to add more customizable logic
