--- a/docs/docs/main/templates/yargs-cli-cmd.mdx
+++ b/docs/docs/main/templates/yargs-cli-cmd.mdx
@@ -5,9 +5,8 @@ import TabItem from '@theme/TabItem';
 
 # yargs-cli-cmd
 
-<span className="badge badge--secondary margin-left--xs">
-    templates@>v1.0.19
-</span>
+{/* prettier-ignore */}
+<span className="badge badge--secondary margin-left--xs">templates@>v1.0.19</span>
 
 <br />
 
