Allow button to accept text prop. Changed buttons on intro page to buttons

--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -88,6 +88,7 @@ using the form below. We hope to hear from you soon!
 
 <Button
     to="https://github.com/marcellino-ornelas/templates/discussions/categories/react-component-feature-requests-feedback"
+    text="Submit feature request"
     size="sm"
     onClick={() => {
         if (typeof gtag === 'function') {
@@ -97,9 +98,7 @@ using the form below. We hope to hear from you soon!
             });
         }
     }}
->
-    Submit feature request
-</Button>
+/>
 
 :::
 
