--- a/docs/docs/main/intro.mdx
+++ b/docs/docs/main/intro.mdx
@@ -8,6 +8,7 @@ pagination_prev: null
 
 import Link from '@docusaurus/Link';
 import styles from './intro.module.css';
+import { Button } from '@site/docs/components/button';
 
 # Welcome to Templates
 
@@ -45,7 +46,7 @@ the whole library and not individual templates you can create.
 Learn how to create your first template.
 
 <div>
-    <Link className={styles.btn} to="./create-new-template/">visit</Link>
+    <Button to="./create-new-template/" text="visit" />
 </div>
 </div>
 
@@ -56,8 +57,7 @@ Learn how to create your first template.
 Explore our library of existing templates.
 
 <div>
-    {/* prettier-ignore */}
-    <Link className={styles.btn} to="./templates/">visit</Link>
+    <Button to="./templates/" text="visit" />
 </div>
 </div>
 
