--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -27,7 +27,7 @@ import ReactComponentTemplateGif from './react-component.gif';
             width="25px"
             className="margin-right--xs"
         />
-        Supports Typescript
+        <span>Supports Typescript</span>
     </div>
     <div className="col col--6 display--flex align-items--center margin-bottom--xs">
         <Icon
@@ -35,7 +35,7 @@ import ReactComponentTemplateGif from './react-component.gif';
             width="25px"
             className="margin-right--xs"
         />{' '}
-        Supports React testing library
+        <span>Supports React testing library</span>
     </div>
     <div className="col col--6 display--flex align-items--center margin-bottom--xs">
         <Icon
@@ -44,7 +44,7 @@ import ReactComponentTemplateGif from './react-component.gif';
             width="25px"
             className="margin-right--xs"
         />{' '}
-        Supports Unit tests
+        <span>Supports Unit tests</span>
     </div>
     <div className="col col--6 display--flex align-items--center margin-bottom--xs">
         <Icon
@@ -52,7 +52,7 @@ import ReactComponentTemplateGif from './react-component.gif';
             width="25px"
             className="margin-right--xs"
         />{' '}
-        Supports multiple CSS languages
+        <span>Supports multiple CSS languages</span>
     </div>
     <div className="col col--6 display--flex align-items--center margin-bottom--xs">
         <Icon
@@ -60,7 +60,7 @@ import ReactComponentTemplateGif from './react-component.gif';
             width="25px"
             className="margin-right--xs"
         />
-        Supports Storybook
+        <span>Supports Storybook</span>
     </div>
 </div>
 
@@ -88,6 +88,7 @@ using the form below. We hope to hear from you soon!
 
 <Button
     to="https://github.com/marcellino-ornelas/templates/discussions/categories/react-component-feature-requests-feedback"
+    text="Submit feature request"
     size="sm"
     onClick={() => {
         if (typeof gtag === 'function') {
@@ -97,9 +98,7 @@ using the form below. We hope to hear from you soon!
             });
         }
     }}
->
-    Submit feature request
-</Button>
+/>
 
 :::
 
@@ -121,9 +120,7 @@ tps react-component path/to/dir/<component-name>
 ```
 
 <Example>
-
 <Tabs>
-
 <TabItem value="Default">
 
 ```bash
@@ -140,7 +137,6 @@ Will produces something like the following:
 ```
 
 </TabItem>
-
 <TabItem value="In directory">
 
 ```bash
@@ -159,9 +155,7 @@ Will produces something like the following:
 ```
 
 </TabItem>
-
 </Tabs>
-
 </Example>
 
 Check out our [examples section](#examples) to see detailed instructions on how
