--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -66,13 +66,13 @@ import ReactComponentTemplateGif from './react-component.gif';
         <Icon icon="logos:prettier" width="25px" className="margin-right--xs" />
         <Icon icon="devicon:biome" width="25px" className="margin-right--xs" />
 
-        <span>Automatic Formatting (beta)</span>
+        <span>Automatic Formatting<span className="badge badge--success margin-left--sm">Beta</span></span>
     </div>
      <div className="col col--6 display--flex align-items--center margin-bottom--xs">
         <Icon icon="logos:eslint" width="25px" className="margin-right--xs" />
         <Icon icon="devicon:biome" width="25px" className="margin-right--xs" />
 
-        <span>Automatic Lint Fixing (beta)</span>
+        <span>Automatic Lint Fixing<span className="badge badge--success margin-left--sm">Beta</span> </span>
     </div>
 
 </div>
@@ -776,6 +776,9 @@ export default Nav;
 
 ### Formatting (beta)
 
+{/* prettier-ignore */}
+<span className="badge badge--secondary margin-bottom--md">templates@>v1.2.1</span>
+
 By default, this template does not automatically run any formatters (e.g.,
 [Prettier](https://prettier.io/)). However, you can enable automatic formatting
 using the `formatter` option. Currently, only `prettier`, `biome`, and `none`
@@ -837,6 +840,9 @@ experience.
 :::
 
 ### Linting (beta)
+
+{/* prettier-ignore */}
+<span className="badge badge--secondary margin-bottom--md">templates@>v1.2.1</span>
 
 By default, this template does not automatically run any linters (e.g.,
 [eslint](https://eslint.org/)). However, you can enable lint fixing by using the
