--- a/docs/docs/main/templates/express-app.mdx
+++ b/docs/docs/main/templates/express-app.mdx
@@ -51,9 +51,9 @@ app and the libraries we use.
     text="Submit feature request"
     size="sm"
     onClick={() => {
-        // eslint-ignore-next-line gtag gets added by docusarous
+        //  eslint-disable-next-line no-undef -- gtag gets added by docusarous
         if (typeof gtag === 'function') {
-            // eslint-ignore-next-line gtag gets added by docusarous
+            //  eslint-disable-next-line no-undef -- gtag gets added by docusarous
             gtag('event', 'feedback_request_click', {
                 event_category: 'Feedback',
                 event_label: 'express-app',
