--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -104,9 +104,9 @@ using the form below. We hope to hear from you soon!
     text="Submit feature request"
     size="sm"
     onClick={() => {
-        // eslint-ignore-next-line gtag gets added by docusarous
+        //  eslint-disable-next-line no-undef -- gtag gets added by docusarous
         if (typeof gtag === 'function') {
-            // eslint-ignore-next-line gtag gets added by docusarous
+            //  eslint-disable-next-line no-undef -- gtag gets added by docusarous
             gtag('event', 'feedback_request_click', {
                 event_category: 'Feedback',
                 event_label: 'react-template',
