clean up errors

--- a/docs/docs/main/templates/express-app.mdx
+++ b/docs/docs/main/templates/express-app.mdx
@@ -104,7 +104,7 @@ tps express-app funny-gifs
 <TabItem value="long build path">
 
 ```bash
-tps express-app cli/commands/funny-gifs
+tps express-app projects/funny-gifs
 ```
 
 </TabItem>
@@ -149,10 +149,11 @@ tps copy express-app
 ### How to use
 
 This template generates a fully functional Express app. The name you provide to
-the CLI will be used for both the app's directory and the package.json name. To
-create the app in a specific directory, prepend the directory path to the name.
+the CLI will be used for both the app's directory and the `package.json` name.
+To create the app in a specific directory, prepend the directory path to the
+name.
 
-Example:
+**Example:**
 
 If you're building a new Express app for a restaurant called `chickens-burgers`,
 you would run the following command:
