Add express-app to template gallery

--- a/docs/docs/main/templates/index.mdx
+++ b/docs/docs/main/templates/index.mdx
@@ -13,3 +13,4 @@ collaborate to bring even more value to the community!
 
 -   [react-component](./templates/react-component)
 -   [yargs-cli-cmd](./templates/yargs-cli-cmd)
+-   [express-app (alpha)](./templates/express-app)
