--- a/docs/docs/main/templates/express-app.mdx
+++ b/docs/docs/main/templates/express-app.mdx
@@ -73,7 +73,7 @@ tps express-app path/to/dir/<app-name>
 ```
 
 ```txt title="Creates"
-| - <cmd-name>/
+| - <app-name>/
     | node_modules/
         | - all libraries node modules...
     | - src
