--- a/docs/docs/main/templates/express-app.mdx
+++ b/docs/docs/main/templates/express-app.mdx
@@ -237,7 +237,7 @@ packages using your preferred package manager.
     | - tsconfig.json
 ```
 
-Once your template is created, you can cd into the directory and run the
+Once your template is created, you can `cd` into the directory and run the
 following command to start the app:
 
 ```bash
