--- a/docs/docs/main/templates/express-app.mdx
+++ b/docs/docs/main/templates/express-app.mdx
@@ -6,7 +6,7 @@ keywords:
     - express app scaffold
     - express app boilerplate
     - express app generator
-    # - express app typescript
+    - express app typescript
 sidebar_label: express-app (alpha)
 ---
 
