add version to typescript

--- a/docs/docs/main/templates/express-app.mdx
+++ b/docs/docs/main/templates/express-app.mdx
@@ -198,6 +198,12 @@ npm run dev
 
 ### Typescript
 
+{/* prettier-ignore */}
+<span className="badge badge--secondary margin-left--xs">templates@>=v1.2.5</span>
+
+<br />
+<br />
+
 Use the `typescript` option to create a express app in typescript. This option
 will change all `js` extensions to `ts`, add a `tsconfig.json` file, add some
 types to various areas of the codebase, and modify the `package.json` to support
