--- a/docs/docs/api/settings/index.mdx
+++ b/docs/docs/api/settings/index.mdx
@@ -1,5 +1,5 @@
 import { Example } from '@site/docs/components/example';
-import { Badge, BadgeList, VersionBadge } from '@site/docs/components/badges';
+import { BadgeList, VersionBadge } from '@site/docs/components/badges';
 
 # Settings File
 
