--- a/docs/docs/main/create-new-template/prompts.mdx
+++ b/docs/docs/main/create-new-template/prompts.mdx
@@ -8,7 +8,7 @@ import { Example } from '@site/docs/components/example';
 import { Dot } from '@site/docs/components/dot';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { Badge, BadgeList, VersionBadge } from '@site/docs/components/badges';
+import { BadgeList, VersionBadge } from '@site/docs/components/badges';
 
 # Prompting
 
