--- a/docs/docs/api/template.mdx
+++ b/docs/docs/api/template.mdx
@@ -5,7 +5,7 @@ sidebar_position: 2
 import { Example } from '@site/docs/components/example';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { Badge, BadgeList, VersionBadge } from '@site/docs/components/badges';
+import { BadgeList, VersionBadge } from '@site/docs/components/badges';
 
 # Template
 
