--- a/docs/docs/main/templates/yargs-cli-cmd.mdx
+++ b/docs/docs/main/templates/yargs-cli-cmd.mdx
@@ -2,7 +2,7 @@ import { TemplateOptions } from '@site/docs/components/templateOptions';
 import { Example } from '@site/docs/components/example';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { Badge, VersionBadge, BadgeList } from '@site/docs/components/badges';
+import { VersionBadge, BadgeList } from '@site/docs/components/badges';
 
 # yargs-cli-cmd
 
