--- a/docs/docs/api/settings/prompt.mdx
+++ b/docs/docs/api/settings/prompt.mdx
@@ -25,7 +25,9 @@ interface Prompt {
      */
     message: string;
     /**
-     * Type of prompt you would like to use
+     * Type of inquirer prompt you would like to use
+     *
+     * @link https://github.com/SBoudrias/Inquirer.js/tree/v6.0.0
      */
     type: 'confirm' | 'input' | 'checkbox' | 'list' | 'rawlist' | 'password';
     /**
