--- a/docs/docs/main/templates/index.mdx
+++ b/docs/docs/main/templates/index.mdx
@@ -14,3 +14,4 @@ collaborate to bring even more value to the community!
 -   [react-component](./templates/react-component)
 -   [yargs-cli-cmd](./templates/yargs-cli-cmd)
 -   [express-app (alpha)](./templates/express-app)
+-   [react-app (alpha)](./templates/react-app)
