add more keywords

--- a/docs/docs/main/templates/react-app.mdx
+++ b/docs/docs/main/templates/react-app.mdx
@@ -5,6 +5,8 @@ keywords:
     - react app scaffold
     - react app boilerplate
     - react app generator
+    - create react app
+    - create-react-app
 sidebar_label: react-app (alpha)
 ---
 
