--- a/docs/docs/main/templates/ai.mdx
+++ b/docs/docs/main/templates/ai.mdx
@@ -19,12 +19,12 @@ import { Badge, BadgeList, VersionBadge } from '@site/docs/components/badges';
 
 <BadgeList>
     <Badge type="success">alpha</Badge>
-    <VersionBadge version="1.0.0" library="tps-ai" />
+    <VersionBadge version="1.0.1" library="tps-ai" />
     <VersionBadge version=">1.2.9" library="templates" />
 </BadgeList>
 
-Generate any codebase in any language, setup files for any library, or anything
-else your mind envisions—all powered by AI.
+Generate any codebase in any language, setup files for any library, or bring any
+idea to life—all powered by AI.
 
 :::info
 
